# cli

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  README_REPL.md  main.cpp
.github/workflows/: cli-release-check.yml  cli-strict-ci.yml
docs/: vix_error_examples.cpp  vix_error_samples.txt  vix_error_samples_extra.txt
include/vix/cli/: CLI.hpp  ErrorHandler.hpp  Style.hpp  Utils.hpp
scripts/: test-build-safety.sh
src/: CLI.cpp  ErrorHandler.cpp  main.cpp
src/app/: AppCMakeGenerator.cpp  AppManifest.cpp  AppProjectResolver.cpp
src/cache/: ArtifactCache.cpp
src/cmake/: CMakeBuild.cpp  GlobalPackages.cpp  Toolchain.cpp
src/commands/: AddCommand.cpp  AgentCommand.cpp  BuildCommand.cpp  CacheCommand.cpp  CheckCommand.cpp  CleanCommand.cpp  CloudCommand.cpp  CompletionCommand.cpp  DbCommand.cpp  DeployCommand.cpp  DepsCommand.cpp  DesktopCommand.cpp  DevCommand.cpp  Dispatch.cpp  DoctorCommand.cpp  EnvCommand.cpp  FmtCommand.cpp  GameExportCommand.cpp  HealthCommand.cpp  InfoCommand.cpp  InitCommand.cpp  InstallCommand.cpp  ListCommand.cpp  LogsCommand.cpp  MakeCommand.cpp  MobileCommand.cpp  ModulesCommand.cpp  NewCommand.cpp  NoteCommand.cpp  OrmCommand.cpp  OutdatedCommand.cpp  P2PCommand.cpp  PackCommand.cpp  ProductionCommand.cpp  ProxyCommand.cpp  PublishCommand.cpp  RegistryCommand.cpp  RemoveCommand.cpp  ReplCommand.cpp  ResetCommand.cpp  (+12 more)
src/commands/check/: CheckFlow.cpp  CheckProject.cpp  CheckScript.cpp
src/commands/db/: DbBackup.cpp  DbChecker.cpp  DbConfig.cpp  DbMigrator.cpp  DbOutput.cpp
src/commands/deploy/: DeployConfig.cpp  DeployOutput.cpp  DeployRunner.cpp
src/commands/env/: EnvChecker.cpp  EnvConfig.cpp  EnvOutput.cpp
src/commands/health/: HealthChecker.cpp  HealthConfig.cpp  HealthOutput.cpp
src/commands/helpers/: ProcessHelpers.cpp  TextHelpers.cpp
src/commands/logs/: LogsAnalyzer.cpp  LogsConfig.cpp  LogsOutput.cpp  LogsRunner.cpp
src/commands/make/: MakeDispatcher.cpp  MakePaths.cpp  MakeUtils.cpp
src/commands/modules/: ModulesCommands.cpp  ModulesContent.cpp  ModulesUtils.cpp
src/commands/new/: NewGenerator.cpp  NewOutput.cpp  NewTemplates.cpp  NewTui.cpp
src/commands/production/: ProductionOutput.cpp  ProductionValidator.cpp
src/commands/proxy/: NginxCertbot.cpp  NginxChecker.cpp  NginxGenerator.cpp  NginxOutput.cpp  ProxyConfig.cpp
src/commands/repl/: ReplConsole.cpp  ReplDispatcher.cpp  ReplFlow.cpp  ReplHistory.cpp  ReplLineEditor.cpp  ReplMath.cpp  ReplUtils.cpp
src/commands/replay/: ReplayCapture.cpp  ReplayClock.cpp  ReplayCommand.cpp  ReplayId.cpp  ReplayJson.cpp  ReplayList.cpp  ReplayPaths.cpp  ReplayPrinter.cpp  ReplayProcess.cpp  ReplayRecorder.cpp  ReplayRunner.cpp  ReplayStore.cpp
src/commands/run/: RunDetail.cpp  RunFlow.cpp  RunProcess.cpp  RunScript.cpp  RunScriptHelpers.cpp
src/commands/tests/: TestsFlow.cpp
src/commands/ws/: WsChecker.cpp  WsConfig.cpp  WsOutput.cpp
src/errors/: ClangGccParser.cpp  CodeFrame.cpp  ErrorPipeline.cpp  RawLogDetectors.cpp
src/errors/rules/: CoutNotDeclaredRule.cpp  DanglingStringViewRule.cpp  DeleteMismatchRule.cpp  HeaderNotFoundRule.cpp  MissingSemicolonRule.cpp  ProcessNullptrAmbiguityRule.cpp  ReturnLocalRefRule.cpp  SharedPtrRawPtrMisuseRule.cpp  UncaughtExceptionRule.cpp  UniquePtrCopyRule.cpp  UseAfterMoveRule.cpp  UseOfUninitializedRule.cpp  VectorOstreamRule.cpp
src/errors/runtime/: AbortRule.cpp  AddressAlreadyInUseRule.cpp  BadVariantAccessRule.cpp  BrokenPipeRule.cpp  BufferOverflowRule.cpp  ConditionVariableMisuseRule.cpp  ConfigParseRuntimeRule.cpp  DataRaceRule.cpp  DeadlockRule.cpp  DetachedThreadLifetimeRule.cpp  DivisionByZeroRule.cpp  DoubleFreeRule.cpp  EmptyContainerFrontBackRule.cpp  FilesystemRuntimeRule.cpp  FuturePromiseRule.cpp  IntegerOverflowRule.cpp  InvalidCastRule.cpp  InvalidFreeRule.cpp  InvalidIteratorDereferenceRule.cpp  IteratorInvalidationRule.cpp  JsonParseRuntimeRule.cpp  MemoryLeakRule.cpp  MisalignedAccessRule.cpp  MutexMisuseRule.cpp  NullPointerRule.cpp  OutOfRangeAccessRule.cpp  PermissionDeniedRule.cpp  PureVirtualCallRule.cpp  ResourceNotFoundRule.cpp  RuntimeRuleUtils.cpp  SegfaultRule.cpp  SpanLifetimeRule.cpp  StackOverflowRule.cpp  StringViewDanglingRuntimeRule.cpp  ThreadCreationFailureRule.cpp  ThreadJoinableRule.cpp  TimeoutRuntimeRule.cpp  UncaughtExceptionRuntimeRule.cpp  UninitializedMemoryRule.cpp  UseAfterFreeRule.cpp
src/errors/template/: AllocatorValueTypeMismatchRule.cpp  AmbiguousOverloadRule.cpp  BadOverrideRule.cpp  ConceptConstraintFailureRule.cpp  ConstQualifierRule.cpp  ConstexprEvaluationFailureRule.cpp  CoroutineReturnTypeRule.cpp  CtadFailureRule.cpp  DeletedFunctionRule.cpp  DependentTypenameRule.cpp  InaccessibleMemberRule.cpp  IncompleteTypeRule.cpp  InvalidAwaitableRule.cpp  InvalidDowncastRule.cpp  InvalidInitializerListRule.cpp  InvalidPromiseTypeRule.cpp  InvalidReferenceBindingRule.cpp  InvalidTemplateTemplateArgumentRule.cpp  InvalidUseOfVoidRule.cpp  LambdaCaptureLifetimeRule.cpp  MissingBeginEndRule.cpp  MissingCoReturnRule.cpp  MoveOnlyCopyRule.cpp  NarrowingConversionRule.cpp  NoMatchingOverloadWithConstraintsRule.cpp  NoMemberAwaitReadyRule.cpp  NoMemberAwaitResumeRule.cpp  NoMemberAwaitSuspendRule.cpp  NoTypeNamedRule.cpp  NoViableConversionRule.cpp  (+9 more)
src/manifest/: RunManifestMerge.cpp  VixManifest.cpp
src/process/: Process_posix.cpp  Process_win.cpp
src/registry/: RegistryCatalog.cpp
src/sdk/: SdkProfiles.cpp
src/util/: Fs.cpp  Hash.cpp  Lockfile.cpp  Manifest.cpp  Resolver.cpp  Semver.cpp  Version.cpp
tests/: CMakeBuildErrorsTests.cpp  CMakeLists.txt  GitDependenciesTest.sh  GlobalInstallOviTest.sh  InitAndAutoGitTest.sh  PackageHashTests.cpp  PublishPreflightTest.sh  RegistryIntegrityTest.sh  RunScriptDependencyPathTest.sh  SdkProfileCompositionTest.sh
tests/fixtures/ovi/: CMakeLists.txt  CMakePresets.json  README.md  ovi.vix  vix.json
tests/fixtures/ovi/examples/: basic.cpp
tests/fixtures/ovi/include/ovi/: ovi.hpp
tests/fixtures/ovi/src/: doctor.cpp  main.cpp
tests/fixtures/ovi/tests/: test_basic.cpp
(+262 files in other folders)
